<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guerre">


    <Button
        android:id="@+id/btnCarducci"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:text="@string/autore_FranzKafka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnJoyce"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/autore_JamesJoyce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKafka" />

    <Button
        android:id="@+id/btnSaba"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/autore_UmbertoSaba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJoyce" />

    <Button
        android:id="@+id/btnUngaretti"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/autore_GiuseppeUngaretti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaba" />

    <Button
        android:id="@+id/btnQuasimodo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/autore_SalvatoreQuasimodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUngaretti" />

    <Button
        android:id="@+id/btnMontale"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/autore_EugenioMontale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuasimodo" />

</androidx.constraintlayout.widget.ConstraintLayout>