<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Novecento">

    <Button
        android:id="@+id/btnFururismo"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="71dp"
        android:text="@string/autore_Futuristi"
        app:layout_constraintBottom_toTopOf="@+id/btnPirandello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPirandello"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="74dp"
        android:text="@string/autore_LuigiPirandello"
        app:layout_constraintBottom_toTopOf="@+id/btnSvevo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFururismo" />

    <Button
        android:id="@+id/btnSvevo"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="164dp"
        android:text="@string/autore_ItaloSvevo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPirandello" />

</androidx.constraintlayout.widget.ConstraintLayout>