<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Decadentismo">

    <Button
        android:id="@+id/btnBaudelaire"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="508dp"
        android:text="@string/autore_ChrlesBoudelaire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAnnunzio"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="338dp"
        android:text="@string/autore_GabrieleDAnnunzio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBaudelaire" />

    <Button
        android:id="@+id/btnPascoli"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="167dp"
        android:text="@string/autore_GiovanniPascoli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnnunzio" />
</androidx.constraintlayout.widget.ConstraintLayout>